* Fix popup menu on the task pane (LP: #1040031).
* New command-line option: --prefer-pygtk.  Only useful for testing against the
  deprecated PyGtk bindings instead of the modern pygobject-introspection.
* New command-line option: --quit.
* Fix popup menu of the tray icon (LP: #1039977).
* Fix crash on exit when using Gtk+ 2 (LP: #1040088).


0.7.1 (2012-02-01)
==================
* Fix reporting problems with non-ASCII characters when using
  gobject-introspection (LP: #785578).
* Fix ^C not exiting the app when using gobject-introspection.
* Implement panel icon color autodetection logic that was missing in the
  gobject-introspection case (LP: #924390).
* New command-line option: --help.
* New command-line option: --replace.  Requires that the running version
  support the new DBus method 'Quit', which was also added in this version.
* Messages printed to stdout are prefixed by "gtimelog" (GUI app output often
  ends up in ~/.xsession-errors, it's polite to identify yourself when writing
  there).
* DBus errors do not pass silently.


0.7.0 (2011-09-21)
==================
* Use gobject-introspection by default, using pygtk only as a fallback.  This
  will require a newer gir1.2-pango-1.0 than what's in Ubuntu Oneiric
  (LP: #855076) and still suffers from key presses being ignored
  (LP: #849732).  Unset the environment variable UBUNTU_MENUPROXY to work
  around the latter bug.
* Rework the gi/pygtk imports so that only the minimum is wrapped in a
  try-except.
* Use /usr/bin/env python in #! line, though this should be hard-coded to the
  installed version of Python in the Debian package.
* Other code cleanup (e.g. use new-style classes via __metaclass__, remove
  ancient workaround for missing `set` built-in).


0.6.1 (2011-09-20)
==================
* Fix two crashes when using GI.  Given by Martin Pitt.


0.6.0 (2011-08-23)
==================
* Ctrl-Q now quits.  (LP: #750092)
* Fixed UnboundLocalError.  (LP: #778285)  Given by Jeroen Langeveld.