@@ -11,6 +11,7 @@
 * New command-line option: --quit.
 * Fix popup menu of the tray icon (LP: #1039977).
 * Fix crash on exit when using Gtk+ 2 (LP: #1040088).
+* New command-line option: --debug.
 
 
 0.7.1 (2012-02-01)
